# lab2-gui-smart-timer

./: CMakeLists.txt  README.md
src/: AddEditDialog.cpp  AddEditDialog.h  MainWindow.cpp  MainWindow.h  Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h  main.h
